--- a/LoveSeat.csproj
+++ b/LoveSeat.csproj
@@ -33,7 +33,7 @@
   <ItemGroup>
     <Reference Include="Divan, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Divan\src\bin\Debug\Divan.dll</HintPath>
+      <HintPath>lib\Divan.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
