added readme, project structure cleanup

--- a/src/LoveSeat.csproj
+++ b/src/LoveSeat.csproj
@@ -33,15 +33,15 @@
   <ItemGroup>
     <Reference Include="Divan, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>lib\Divan.dll</HintPath>
+      <HintPath>..\lib\Divan.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=3.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>lib\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\lib\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="SyntaxHighlightingTextBox, Version=1.0.3693.26343, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>lib\SyntaxHighlightingTextBox.dll</HintPath>
+      <HintPath>..\lib\SyntaxHighlightingTextBox.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
